update add Dealing Outlet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,13 @@
         android:versionCode="24"
         android:versionName="ILV1.24">
         <activity
+            android:name=".list_profiling_reject_outlet"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".add_profiling_outlet"
             android:exported="false">
             <meta-data
@@ -1165,6 +1172,16 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.project45.ilovepadma.outlet.list_listed_outlet" />
+        </activity>
+        <activity
+            android:name=".outlet.list_profiling_reject_outlet"
+            android:exported="true"
+            android:label="List Profiling Reject Outlet"
+            android:parentActivityName=".outlet.add_outlet_semesta2"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.project45.ilovepadma.outlet.add_outlet_semesta2" />
         </activity>
         <activity
             android:name=".outlet.list_outlet"
